--- a/index.html
+++ b/index.html
@@ -77,16 +77,16 @@
             <h2>Стандарт</h2>
             <p class="slide-description">
               <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              Все необходимое для стабилизации состояния.
+              (Нужен текст)
             </p>
             <p class="slide-description">
               <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              Включен минимально необходимый набор медикаментов
+              (Нужен текст)
             </p>
           </div>
         <div class="text-slider">
-          <a  href="./price.html">Срочный вызов</a>
-          <p class="price">5000 руб</p>
+          <a  href="./price.html">Заказать</a>
+          <p class="price">5200 ₽</p>
         </div>
 
         </div></swiper-slide
@@ -97,18 +97,17 @@
             <h2>Медиум</h2>
             <p class="slide-description">
               <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              Индивидуальный план восстановления
+              (Нужен текст)
             </p>
             <p class="slide-description">
               <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              В результате усиленной программы очищение и восстановление
-              организма происходит быстро и эффективно
+              (Нужен текст)
             </p>
           </div>
 
           <div class="text-slider">
-            <a  href="./price.html">Срочный вызов</a>
-            <p class="price">8000 руб</p>
+            <a  href="./price.html">Заказать</a>
+            <p class="price">8500 ₽</p>
           </div>
         </div></swiper-slide
         >
@@ -118,21 +117,21 @@
             <h2>Ультра</h2>
             <p class="slide-description">
               <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              Работа с психологом
+              (Нужен текст)
             </p>
             <p class="slide-description">
               <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              Индиви дуальный план восстановления
+              (Нужен текст)
             </p>
             <p class="slide-description">
               <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              Гарантия положительного результата
+              (Нужен текст)
             </p>
           </div>
 
           <div class="text-slider">
-            <a  href="./price.html">Срочный вызов</a>
-            <p class="price">15000 руб</p>
+            <a  href="./price.html">Заказать</a>
+            <p class="price">12100 ₽</p>
           </div>
         </div></swiper-slide
         >
@@ -146,17 +145,17 @@
             <h2>Стандарт</h2>
             <p class="slide-description">
               <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              Все необходимое для стабилизации состояния.
+              (Нужен текст)
             </p>
             <p class="slide-description">
               <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              Включен минимально необходимый набор медикаментов
+              (Нужен текст)
             </p>
           </div>
 
           <div class="text-slider">
-            <a  href="./price.html">Срочный вызов</a>
-            <p class="price">5000 руб</p>
+            <a  href="./price.html">Заказать</a>
+            <p class="price">5200 ₽</p>
           </div>
         </div>
         <div class="slider-card">
@@ -164,18 +163,17 @@
             <h2>Медиум</h2>
             <p class="slide-description">
               <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              Индивидуальный план восстановления
+              (Нужен текст)
             </p>
             <p class="slide-description">
               <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              В результате усиленной программы очищение и восстановление
-              организма происходит быстро и эффективно
+              (Нужен текст)
             </p>
           </div>
 
           <div class="text-slider">
-            <a  href="./price.html">Срочный вызов</a>
-            <p class="price">8000 руб</p>
+            <a  href="./price.html">Заказать</a>
+            <p class="price">8500 ₽</p>
           </div>
         </div>
         <div class="slider-card">
@@ -183,20 +181,19 @@
             <h2>Ультра</h2>
             <p class="slide-description">
               <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              Работа с психологом
+              (Нужен текст)
+            <p class="slide-description">
+              <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
+              (Нужен текст)
             </p>
             <p class="slide-description">
               <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              Индиви дуальный план восстановления
-            </p>
-            <p class="slide-description">
-              <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              Гарантия положительного результата
+              (Нужен текст)
             </p>
           </div>
           <div class="text-slider">
-            <a  href="./price.html">Срочный вызов</a>
-            <p class="price">15000 руб</p>
+            <a  href="./price.html">Заказать</a>
+            <p class="price">12100 ₽</p>
           </div>
         </div>
       </div>
@@ -403,61 +400,60 @@
       <div class="inner-slider-cards">
         <div class="slider-card">
             <div class="text-flex">
-              <h2>Вшивание</h2>
+              <h2>Имплант Торпедо</h2>
               <p class="slide-description">
                 <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-                Все необходимое для стабилизации состояния.
+                (Нужен текст)
               </p>
               <p class="slide-description">
                 <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-                Включен минимально необходимый набор медикаментов
+                (Нужен текст)
               </p>
             </div>
 
           <div class="text-slider">
-            <a  href="./price.html">Срочный вызов</a>
-            <p class="price">5000 руб</p>
+            <a  href="./price.html">Заказать</a>
+            <p class="price">от 5000 ₽</p>
           </div>
           </div>
         <div class="slider-card">
             <div class="text-flex">
-              <h2>Укол</h2>
+              <h2>Кодирование препаратом Эспераль</h2>
               <p class="slide-description">
                 <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-                Индивидуальный план восстановления
+                (Нужен текст)
               </p>
               <p class="slide-description">
                 <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-                В результате усиленной программы очищение и восстановление
-                организма происходит быстро и эффективно
+                (Нужен текст)
               </p>
             </div>
 
           <div class="text-slider">
-            <a  href="./price.html">Срочный вызов</a>
-            <p class="price">8000 руб</p>
+            <a  href="./price.html">Заказать</a>
+            <p class="price">от 8000 ₽</p>
           </div>
           </div>
         <div class="slider-card">
             <div class="text-flex">
-              <h2>2х Блок</h2>
+              <h2>Кодирование препаратом Нолтрексон</h2>
               <p class="slide-description">
                 <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-                Работа с психологом
+                (Нужен текст)
               </p>
               <p class="slide-description">
                 <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-                Индиви дуальный план восстановления
+                (Нужен текст)
               </p>
               <p class="slide-description">
                 <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-                Гарантия положительного результата
+                (Нужен текст)
               </p>
             </div>
 
           <div class="text-slider">
-            <a  href="./price.html">Срочный вызов</a>
-            <p class="price">15000 руб</p>
+            <a  href="./price.html">Заказать</a>
+            <p class="price">от 25000 ₽</p>
           </div>
           </div>
       </div>
@@ -471,17 +467,17 @@
             <h2>Вшивание</h2>
             <p class="slide-description">
               <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              Все необходимое для стабилизации состояния.
+              (Нужен текст)
             </p>
             <p class="slide-description">
               <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              Включен минимально необходимый набор медикаментов
+              (Нужен текст)
             </p>
           </div>
 
           <div class="text-slider">
-            <a  href="./price.html">Срочный вызов</a>
-            <p class="price">5000 руб</p>
+            <a  href="./price.html">Заказать</a>
+            <p class="price">от 5000 ₽</p>
           </div>
         </div></swiper-slide
         >
@@ -491,18 +487,17 @@
             <h2>Укол</h2>
             <p class="slide-description">
               <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              Индивидуальный план восстановления
+              (Нужен текст)
             </p>
             <p class="slide-description">
               <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              В результате усиленной программы очищение и восстановление
-              организма происходит быстро и эффективно
+              (Нужен текст)
             </p>
           </div>
 
           <div class="text-slider">
-            <a  href="./price.html">Срочный вызов</a>
-            <p class="price">8000 руб</p>
+            <a  href="./price.html">Заказать</a>
+            <p class="price">от 8000 ₽</p>
           </div>
         </div></swiper-slide
         >
@@ -512,21 +507,21 @@
             <h2>2х Блок</h2>
             <p class="slide-description">
               <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              Работа с психологом
+              (Нужен текст)
             </p>
             <p class="slide-description">
               <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              Индиви дуальный план восстановления
+              (Нужен текст)
             </p>
             <p class="slide-description">
               <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              Гарантия положительного результата
+              (Нужен текст)
             </p>
           </div>
 
           <div class="text-slider">
-            <a  href="./price.html">Срочный вызов</a>
-            <p class="price">15000 руб</p>
+            <a  href="./price.html">Заказать</a>
+            <p class="price">от 15000 ₽</p>
           </div>
         </div></swiper-slide
         >
