--- a/index.html
+++ b/index.html
@@ -30,6 +30,23 @@
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
   </head>
   <body>
+    <!-- Yandex.Metrika counter -->
+<script type="text/javascript" >
+  (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+  m[i].l=1*new Date();
+  for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
+  k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+  (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+  ym(96232166, "init", {
+       clickmap:true,
+       trackLinks:true,
+       accurateTrackBounce:true,
+       webvisor:true
+  });
+</script>
+<noscript><div><img src="https://mc.yandex.ru/watch/96232166" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<!-- /Yandex.Metrika counter -->
     <script src="
     https://cdn.jsdelivr.net/npm/swiper@11.0.5/swiper-bundle.min.js
     "></script>
@@ -77,16 +94,16 @@
             <h2>Стандарт</h2>
             <p class="slide-description">
               <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              (Нужен текст)
+              Все необходимое для стабилизации состояния.
             </p>
             <p class="slide-description">
               <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              (Нужен текст)
+              Включен минимально необходимый набор медикаментов
             </p>
           </div>
         <div class="text-slider">
-          <a  href="./price.html">Заказать</a>
-          <p class="price">5200 ₽</p>
+          <a  href="./price.html">Срочный вызов</a>
+          <p class="price">5000 руб</p>
         </div>
 
         </div></swiper-slide
@@ -97,17 +114,18 @@
             <h2>Медиум</h2>
             <p class="slide-description">
               <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              (Нужен текст)
+              Индивидуальный план восстановления
             </p>
             <p class="slide-description">
               <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              (Нужен текст)
+              В результате усиленной программы очищение и восстановление
+              организма происходит быстро и эффективно
             </p>
           </div>
 
           <div class="text-slider">
-            <a  href="./price.html">Заказать</a>
-            <p class="price">8500 ₽</p>
+            <a  href="./price.html">Срочный вызов</a>
+            <p class="price">8000 руб</p>
           </div>
         </div></swiper-slide
         >
@@ -117,21 +135,21 @@
             <h2>Ультра</h2>
             <p class="slide-description">
               <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              (Нужен текст)
+              Работа с психологом
             </p>
             <p class="slide-description">
               <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              (Нужен текст)
+              Индиви дуальный план восстановления
             </p>
             <p class="slide-description">
               <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              (Нужен текст)
+              Гарантия положительного результата
             </p>
           </div>
 
           <div class="text-slider">
-            <a  href="./price.html">Заказать</a>
-            <p class="price">12100 ₽</p>
+            <a  href="./price.html">Срочный вызов</a>
+            <p class="price">15000 руб</p>
           </div>
         </div></swiper-slide
         >
@@ -145,17 +163,17 @@
             <h2>Стандарт</h2>
             <p class="slide-description">
               <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              (Нужен текст)
+              Все необходимое для стабилизации состояния.
             </p>
             <p class="slide-description">
               <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              (Нужен текст)
+              Включен минимально необходимый набор медикаментов
             </p>
           </div>
 
           <div class="text-slider">
-            <a  href="./price.html">Заказать</a>
-            <p class="price">5200 ₽</p>
+            <a  href="./price.html">Срочный вызов</a>
+            <p class="price">5000 руб</p>
           </div>
         </div>
         <div class="slider-card">
@@ -163,17 +181,18 @@
             <h2>Медиум</h2>
             <p class="slide-description">
               <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              (Нужен текст)
+              Индивидуальный план восстановления
             </p>
             <p class="slide-description">
               <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              (Нужен текст)
+              В результате усиленной программы очищение и восстановление
+              организма происходит быстро и эффективно
             </p>
           </div>
 
           <div class="text-slider">
-            <a  href="./price.html">Заказать</a>
-            <p class="price">8500 ₽</p>
+            <a  href="./price.html">Срочный вызов</a>
+            <p class="price">8000 руб</p>
           </div>
         </div>
         <div class="slider-card">
@@ -181,19 +200,20 @@
             <h2>Ультра</h2>
             <p class="slide-description">
               <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              (Нужен текст)
-            <p class="slide-description">
-              <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              (Нужен текст)
+              Работа с психологом
             </p>
             <p class="slide-description">
               <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              (Нужен текст)
+              Индиви дуальный план восстановления
+            </p>
+            <p class="slide-description">
+              <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
+              Гарантия положительного результата
             </p>
           </div>
           <div class="text-slider">
-            <a  href="./price.html">Заказать</a>
-            <p class="price">12100 ₽</p>
+            <a  href="./price.html">Срочный вызов</a>
+            <p class="price">15000 руб</p>
           </div>
         </div>
       </div>
@@ -400,60 +420,61 @@
       <div class="inner-slider-cards">
         <div class="slider-card">
             <div class="text-flex">
-              <h2>Имплант Торпедо</h2>
+              <h2>Вшивание</h2>
               <p class="slide-description">
                 <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-                (Нужен текст)
+                Все необходимое для стабилизации состояния.
               </p>
               <p class="slide-description">
                 <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-                (Нужен текст)
+                Включен минимально необходимый набор медикаментов
               </p>
             </div>
 
           <div class="text-slider">
-            <a  href="./price.html">Заказать</a>
-            <p class="price">от 5000 ₽</p>
+            <a  href="./price.html">Срочный вызов</a>
+            <p class="price">5000 руб</p>
           </div>
           </div>
         <div class="slider-card">
             <div class="text-flex">
-              <h2>Кодирование препаратом Эспераль</h2>
+              <h2>Укол</h2>
               <p class="slide-description">
                 <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-                (Нужен текст)
+                Индивидуальный план восстановления
               </p>
               <p class="slide-description">
                 <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-                (Нужен текст)
+                В результате усиленной программы очищение и восстановление
+                организма происходит быстро и эффективно
               </p>
             </div>
 
           <div class="text-slider">
-            <a  href="./price.html">Заказать</a>
-            <p class="price">от 8000 ₽</p>
+            <a  href="./price.html">Срочный вызов</a>
+            <p class="price">8000 руб</p>
           </div>
           </div>
         <div class="slider-card">
             <div class="text-flex">
-              <h2>Кодирование препаратом Нолтрексон</h2>
+              <h2>2х Блок</h2>
               <p class="slide-description">
                 <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-                (Нужен текст)
+                Работа с психологом
               </p>
               <p class="slide-description">
                 <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-                (Нужен текст)
+                Индиви дуальный план восстановления
               </p>
               <p class="slide-description">
                 <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-                (Нужен текст)
+                Гарантия положительного результата
               </p>
             </div>
 
           <div class="text-slider">
-            <a  href="./price.html">Заказать</a>
-            <p class="price">от 25000 ₽</p>
+            <a  href="./price.html">Срочный вызов</a>
+            <p class="price">15000 руб</p>
           </div>
           </div>
       </div>
@@ -467,17 +488,17 @@
             <h2>Вшивание</h2>
             <p class="slide-description">
               <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              (Нужен текст)
+              Все необходимое для стабилизации состояния.
             </p>
             <p class="slide-description">
               <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              (Нужен текст)
+              Включен минимально необходимый набор медикаментов
             </p>
           </div>
 
           <div class="text-slider">
-            <a  href="./price.html">Заказать</a>
-            <p class="price">от 5000 ₽</p>
+            <a  href="./price.html">Срочный вызов</a>
+            <p class="price">5000 руб</p>
           </div>
         </div></swiper-slide
         >
@@ -487,17 +508,18 @@
             <h2>Укол</h2>
             <p class="slide-description">
               <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              (Нужен текст)
+              Индивидуальный план восстановления
             </p>
             <p class="slide-description">
               <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              (Нужен текст)
+              В результате усиленной программы очищение и восстановление
+              организма происходит быстро и эффективно
             </p>
           </div>
 
           <div class="text-slider">
-            <a  href="./price.html">Заказать</a>
-            <p class="price">от 8000 ₽</p>
+            <a  href="./price.html">Срочный вызов</a>
+            <p class="price">8000 руб</p>
           </div>
         </div></swiper-slide
         >
@@ -507,21 +529,21 @@
             <h2>2х Блок</h2>
             <p class="slide-description">
               <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              (Нужен текст)
+              Работа с психологом
             </p>
             <p class="slide-description">
               <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              (Нужен текст)
+              Индиви дуальный план восстановления
             </p>
             <p class="slide-description">
               <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              (Нужен текст)
+              Гарантия положительного результата
             </p>
           </div>
 
           <div class="text-slider">
-            <a  href="./price.html">Заказать</a>
-            <p class="price">от 15000 ₽</p>
+            <a  href="./price.html">Срочный вызов</a>
+            <p class="price">15000 руб</p>
           </div>
         </div></swiper-slide
         >
