metrika робит + новый текст вызов врача на дом

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
   </head>
   <body>
+
     <!-- Yandex.Metrika counter -->
 <script type="text/javascript" >
   (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
@@ -44,6 +45,7 @@
        accurateTrackBounce:true,
        webvisor:true
   });
+
 </script>
 <noscript><div><img src="https://mc.yandex.ru/watch/96232166" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 <!-- /Yandex.Metrika counter -->
@@ -94,16 +96,23 @@
             <h2>Стандарт</h2>
             <p class="slide-description">
               <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              Все необходимое для стабилизации состояния.
+              Осмотр
             </p>
             <p class="slide-description">
               <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              Включен минимально необходимый набор медикаментов
+              Инструментальное обследование
+            </p>
+            <p class="slide-description">
+              <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
+              Минимальный набор препаратов
+            </p>
+            <p class="slide-description">
+             * При употреблении алкоголя 1-2 дня.
             </p>
           </div>
         <div class="text-slider">
-          <a  href="./price.html">Срочный вызов</a>
-          <p class="price">5000 руб</p>
+          <a  href="./price.html">Заказать</a>
+          <p class="price">5200 руб</p>
         </div>
 
         </div></swiper-slide
@@ -114,18 +123,28 @@
             <h2>Медиум</h2>
             <p class="slide-description">
               <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              Индивидуальный план восстановления
+              Осмотр
             </p>
             <p class="slide-description">
               <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              В результате усиленной программы очищение и восстановление
-              организма происходит быстро и эффективно
+              Инструментальное обследование
+            </p>
+            <p class="slide-description">
+              <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
+              Набор для стабилизации состояния
+            </p>
+            <p class="slide-description">
+              <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
+              Таблетированая терапия
+            </p>
+            <p class="slide-description">
+              * При употреблении алкоголя 3 + дня .
             </p>
           </div>
 
           <div class="text-slider">
-            <a  href="./price.html">Срочный вызов</a>
-            <p class="price">8000 руб</p>
+            <a  href="./price.html">Заказать</a>
+            <p class="price">8500 руб</p>
           </div>
         </div></swiper-slide
         >
@@ -135,21 +154,60 @@
             <h2>Ультра</h2>
             <p class="slide-description">
               <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              Работа с психологом
+              Осмотр
             </p>
             <p class="slide-description">
               <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              Индиви дуальный план восстановления
+              Инструментальное обследование
             </p>
             <p class="slide-description">
               <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              Гарантия положительного результата
+              Индивидуальный набор для купирования симптомов
+            </p>
+            <p class="slide-description">
+              <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
+              Таблетированая терапия (Успешная)
+            </p>
+            <p class="slide-description">
+              * При употреблении алкоголя от 3-ех дней. 
             </p>
           </div>
 
           <div class="text-slider">
-            <a  href="./price.html">Срочный вызов</a>
-            <p class="price">15000 руб</p>
+            <a  href="./price.html">Заказать</a>
+            <p class="price">12100 руб</p>
+          </div>
+        </div></swiper-slide
+        >
+        <swiper-slide
+        ><div class="slider-card">
+          <div class="text-flex">
+            <h2>Домашний стационар</h2>
+            <p class="slide-description">
+              <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
+              Осмотр
+            </p>
+            <p class="slide-description">
+              <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
+              Инструментальное обследование
+            </p>
+            <p class="slide-description">
+              <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
+              Индивидуальный набор для купирования симптомов
+            </p>
+            <p class="slide-description">
+              <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
+              Коррекция сна
+            </p>
+            <p class="slide-description">
+              <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
+              Домашние наблюдение
+            </p>
+          </div>
+
+          <div class="text-slider">
+            <a  href="./price.html">Заказать</a>
+            <p class="price">25000 руб</p>
           </div>
         </div></swiper-slide
         >
@@ -163,17 +221,24 @@
             <h2>Стандарт</h2>
             <p class="slide-description">
               <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              Все необходимое для стабилизации состояния.
+              Осмотр
             </p>
             <p class="slide-description">
               <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              Включен минимально необходимый набор медикаментов
+              Инструментальное обследование
             </p>
+            <p class="slide-description">
+              <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
+              Минимальный набор препаратов
+            </p>
+            <p class="slide-description">
+              * При употреблении алкоголя 1-2 дня.
+             </p>
           </div>
 
           <div class="text-slider">
-            <a  href="./price.html">Срочный вызов</a>
-            <p class="price">5000 руб</p>
+            <a  href="./price.html">Заказать</a>
+            <p class="price">5200 руб</p>
           </div>
         </div>
         <div class="slider-card">
@@ -181,18 +246,29 @@
             <h2>Медиум</h2>
             <p class="slide-description">
               <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              Индивидуальный план восстановления
+              Осмотр
             </p>
             <p class="slide-description">
               <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              В результате усиленной программы очищение и восстановление
-              организма происходит быстро и эффективно
+              Инструментальное обследование
             </p>
+            <p class="slide-description">
+              <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
+              Набор для стабилизации состояния
+            </p>
+            <p class="slide-description">
+              <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
+              Таблетированая терапия
+            </p>
+          </p>
+          <p class="slide-description">
+            * При употреблении алкоголя от 3-ех дней. 
+          </p> 
           </div>
 
           <div class="text-slider">
-            <a  href="./price.html">Срочный вызов</a>
-            <p class="price">8000 руб</p>
+            <a  href="./price.html">Заказать</a>
+            <p class="price">8500 руб</p>
           </div>
         </div>
         <div class="slider-card">
@@ -200,20 +276,27 @@
             <h2>Ультра</h2>
             <p class="slide-description">
               <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              Работа с психологом
+              Осмотр
             </p>
             <p class="slide-description">
               <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              Индиви дуальный план восстановления
+              Инструментальное обследование
             </p>
             <p class="slide-description">
               <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              Гарантия положительного результата
+              Индивидуальный набор для купирования симптомов
+            </p>
+            <p class="slide-description">
+              <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
+              Таблетированая терапия (Успешная)
+            </p>
+            <p class="slide-description">
+              * При употреблении алкоголя от 3-ех дней. 
             </p>
           </div>
           <div class="text-slider">
-            <a  href="./price.html">Срочный вызов</a>
-            <p class="price">15000 руб</p>
+            <a  href="./price.html">Заказать</a>
+            <p class="price">12100 руб</p>
           </div>
         </div>
       </div>
@@ -420,7 +503,7 @@
       <div class="inner-slider-cards">
         <div class="slider-card">
             <div class="text-flex">
-              <h2>Вшивание</h2>
+              <h2>Имплант Торпедо</h2>
               <p class="slide-description">
                 <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
                 Все необходимое для стабилизации состояния.
@@ -438,7 +521,7 @@
           </div>
         <div class="slider-card">
             <div class="text-flex">
-              <h2>Укол</h2>
+              <h2>Кодирование препаратом Эспераль</h2>
               <p class="slide-description">
                 <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
                 Индивидуальный план восстановления
@@ -457,7 +540,7 @@
           </div>
         <div class="slider-card">
             <div class="text-flex">
-              <h2>2х Блок</h2>
+              <h2>Кодирование препаратом Нолтрексон</h2>
               <p class="slide-description">
                 <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
                 Работа с психологом
@@ -474,7 +557,7 @@
 
           <div class="text-slider">
             <a  href="./price.html">Срочный вызов</a>
-            <p class="price">15000 руб</p>
+            <p class="price">25000 руб</p>
           </div>
           </div>
       </div>
